[project]
authors = [{name = "Ali R. Khan", email = "alik@robarts.ca"}]
dependencies = []
name = "ClearMap"
requires-python = ">= 3.9"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.feature.runtime.dependencies]
python = "3.9.*"
pip = "*"
gxx = "*"
ipython = "*"
vispy = "*"
pyopengl = "*"
pyqt = "<6"
pyqtwebengine = "*"
pyqtgraph = "0.12.*"
opencv = "*"
cython = "<3"
numpy = "*"
scipy = "*"
pandas = "<2"
pyarrow = "*"
matplotlib = "*"
scikit-image = "*"
scikit-learn = "*"
graph-tool = "<=2.45"
pytorch = "<=1.11"
mkl = "<2024.1"
configobj = "*"
natsort = "*"
tifffile = "<2020.9.22"
xmltodict = "*"
pygments = "*"
qdarkstyle = "*"
qtpy = "*"
psutil = "*"
tqdm = "*"
mpld3 = "*"

[tool.pixi.pypi-dependencies]
ClearMap = { path = ".", editable = true }

[tool.pixi.environments.default]
features = ["runtime"]

[tool.pixi.dependencies]
jupyterlab = ">=4.4.6,<5"


